fix: Fix content overflow on developer card

--- a/frontend/src/styles/developers.scss
+++ b/frontend/src/styles/developers.scss
@@ -20,7 +20,7 @@
     .developer-item {
       box-shadow: var(--border-shadow);
       border-radius: 5px;
-      height: 335px;
+      height: 100%;
       .card {
         height: inherit;
         overflow-y: hidden;
